--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-BASEURL={{your-app-service-endpoint.database.windows.net}}
-DBUSER={{username}}
-PASSWORD={{password}}
-DATABASE={{database_name}}
+BASEURL=warawut-db.database.windows.net
+DBUSER=mycosadmin
+PASSWORD=boat_110843
+DATABASE=B-mycos-DB
 DBENGINE=mssql
 ENCRYPT=true
